# tinygrep

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: lib.rs
grep/: Cargo.toml
grep/src/: lib.rs
src/: cmds.rs  main.rs
