[package]
name = "tinygrep"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Vivek Tiwari <beeb5k6@gmail.com>"]
repository = "https://github.com/beeb5k/tinygrep"

[dependencies]
cli = { path = "cli" }
grep = { path = "grep" }

[workspace]
members = ["grep", "cli"]

[[bin]]
name = "tgrep"
path = "src/main.rs"
